export default class Cliente {

}